--- a/detail.html
+++ b/detail.html
@@ -9,28 +9,49 @@
         body, html {
             height: 100%;
             margin: 0;
-            display: flex;
-            justify-content: center;  /* 水平居中 */
-            align-items: center;      /* 垂直居中 */
+            padding: 0;
+            font-family: Arial, sans-serif;
         }
-        #viewer {
-            width: 600px;
-            height: 600px;
-            border: 1px solid #ccc;
+        .container {
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: center;
+            align-items: flex-start;
+            max-width: 1200px;
+            margin: 20px auto;
+            gap: 20px;
         }
         .info {
+            flex: 1;
+            min-width: 300px;
             max-width: 600px;
-            margin: 30px auto;
             font-size: 18px;
             word-break: break-word;
-            padding: 0 10px;
+            padding: 20px;
+            box-sizing: border-box;
+        }
+        .viewer-container {
+            flex: 1;
+            min-width: 300px;
+            max-width: 600px;
+        }
+        #viewer {
+            width: 100%;
+            height: 600px;
+            border: 1px solid #ccc;
+            position: relative;
         }
         .info h2 {
             text-align: center;
             font-size: 26px;
             overflow-wrap: break-word;
+            margin-top: 0;
         }
         #viewer-message {
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
             font-size: 16px;
             color: #666;
             text-align: center;
@@ -38,18 +59,22 @@
     </style>
 </head>
 <body>
-    <div class="info">
-        <h2 id="formula">加载中...</h2>
-        <p><strong>能量:</strong> <span id="energy"></span> eV</p>
-        <p><strong>质量密度:</strong> <span id="density"></span> g/cm³</p>
-        <p><strong>氮浓度:</strong> <span id="n_concentration"></span>%</p>
-        <p><strong>爆轰能量 (E<sub>d</sub>):</strong> <span id="ed"></span> kJ/g</p>
-        <p><strong>爆轰速度 (V<sub>d</sub>):</strong> <span id="vd"></span> km/s</p>
-        <p><strong>爆轰压力 (P<sub>d</sub>):</strong> <span id="pd"></span> GPa</p>
-    </div>
+    <div class="container">
+        <div class="info">
+            <h2 id="formula">加载中...</h2>
+            <p><strong>能量:</strong> <span id="energy"></span> eV</p>
+            <p><strong>质量密度:</strong> <span id="density"></span> g/cm³</p>
+            <p><strong>氮浓度:</strong> <span id="n_concentration"></span>%</p>
+            <p><strong>爆轰能量 (E<sub>d</sub>):</strong> <span id="ed"></span> kJ/g</p>
+            <p><strong>爆轰速度 (V<sub>d</sub>):</strong> <span id="vd"></span> km/s</p>
+            <p><strong>爆轰压力 (P<sub>d</sub>):</strong> <span id="pd"></span> GPa</p>
+        </div>
 
-    <div id="viewer">
-        <div id="viewer-message">加载结构中...</div>
+        <div class="viewer-container">
+            <div id="viewer">
+                <div id="viewer-message">加载结构中...</div>
+            </div>
+        </div>
     </div>
 
     <script>
@@ -77,11 +102,14 @@
 
             try {
                 const cif = generateCIF(material);
-                const viewer = $3Dmol.createViewer("viewer", { backgroundColor: "white" });
+                const viewer = $3Dmol.createViewer(document.getElementById("viewer"), { 
+                    backgroundColor: "white",
+                    defaultZoom: 1.0
+                });
                 viewer.addModel(cif, "cif");
                 viewer.setStyle({}, { stick: {}, sphere: { scale: 0.3 } });
                 viewer.zoomTo();
-                viewer.center();  // 添加这行代码来确保模型居中
+                viewer.center();
                 viewer.render();
 
                 const messageDiv = document.getElementById("viewer-message");
@@ -121,6 +149,6 @@
     function formatFormula(formula) {
         return formula.replace(/(\D)(\d+)/g, (_, element, num) => `${element}<sub>${num}</sub>`);
     }
-</script>
+    </script>
 </body>
 </html>
